# tube-bend-sheet

./: FusionBendSheet.manifest  Makefile  TubeFabrication.manifest  __init__.py  config.py  cope_calculator_gaps.md  cope_calculator_review.md  pyproject.toml  pyrightconfig.json  tube_coping_addin_spec.md
commands/: __init__.py
core/: __init__.py  body_path.py  body_profile.py  calculations.py  combined_output.py  compensation.py  conventions.py  cope_math.py  cope_path.py  cope_template.py  direction_validation.py  formatting.py  geometry.py  geometry_extraction.py  grip_tail.py  html_generator.py  path_analysis.py  path_ordering.py  protocols.py  sketch_matching.py  tolerances.py
docs/: robustness-review-2026-01-31.md
models/: __init__.py  bend_data.py  bender.py  body_path_data.py  compensation.py  constants.py  cope_data.py  cope_input.py  match_data.py  material.py  tube.py  types.py
resources/: benders.json  materials.json  tubes.json
storage/: attributes.py  json_store.py  materials.py  profiles.py  tubes.py
tests/: __init__.py  conftest.py  helpers.py  test_body_path_core.py  test_body_profile.py  test_calculations.py  test_combined_output.py  test_compensation.py  test_compensation_calc.py  test_conventions.py  test_cope_input.py  test_cope_math.py  test_cope_path.py  test_cope_template.py  test_custom_events.py  test_formatting.py  test_geometry.py  test_geometry_extraction.py  test_geometry_vector_ops.py  test_grip_tail.py  test_html_generator.py  test_material.py  test_materials.py  test_path_ordering.py  test_profiles.py  test_sketch_matching.py  (+2 more)
(+71 files in other folders)
